# git-tools

./: .otto.yml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  git-tools.yml.example  shell-functions.sh
.github/workflows/: binary-release.yml  ci.yml  release.yml
clone/: Cargo.toml
clone/docs/: 2026-06-26-migrate-rough-edges.md
clone/docs/design/: 2026-06-27-clone-migrate-smoothing-implementation-notes.md  2026-06-27-clone-migrate-smoothing.md
clone/src/: bare.rs  cli.rs  config.rs  flatten.rs  lib.rs  main.rs  migrate.rs  shell.rs  transport.rs  worktree.rs
clone/src/bare/: tests.rs
clone/src/config/: tests.rs
clone/src/flatten/: tests.rs
clone/src/migrate/: tests.rs
clone/src/shell/: tests.rs
clone/src/worktree/: tests.rs
clone/tests/: integration_tests.rs  lifecycle_tests.rs
common/: Cargo.toml
common/config/: languages.yml
common/src/: bare.rs  config.rs  error.rs  language.rs  lib.rs  log.rs  parallel.rs  rkvr.rs  shell.rs  transport.rs
common/src/bare/: tests.rs
common/src/config/: tests.rs
common/src/git/: mod.rs  run.rs  spec.rs  url_parser.rs
common/src/repo/: discovery.rs  info.rs  mod.rs
common/src/shell/: tests.rs
common/src/transport/: tests.rs
docs/: shakedown-v0.2.13.md  shakedown-v0.2.8.md  shared-code-extraction-plan.md
docs/design/: 2026-03-18-language-filtering.md  2026-06-21-clone-bare-worktree-implementation-notes.md  2026-06-21-clone-bare-worktree.md  2026-06-21-common-shared-infra-implementation-notes.md  2026-06-21-common-shared-infra.md  2026-06-28-consolidate-worktree-primitives-implementation-notes.md  2026-06-28-consolidate-worktree-primitives.md  2026-06-28-worktree-tool.md  2026-06-29-shell-init-subcommand-implementation-notes.md  2026-06-29-shell-init-subcommand.md  2026-07-03-clone-flat-default-implementation-notes.md  2026-07-03-clone-flat-default.md  2026-07-07-clone-worktree-split-implementation-notes.md  2026-07-07-clone-worktree-split.md
filter-ref/: Cargo.toml
filter-ref/src/: main.rs
ls-git-repos/: Cargo.toml
ls-git-repos/src/: main.rs
ls-github-repos/: Cargo.toml
ls-github-repos/src/: main.rs  tests.rs
ls-owners/: Cargo.toml
ls-owners/docs/: shakedown-ls-owners-remote.md
ls-owners/src/: main.rs
ls-stale-branches/: Cargo.toml
ls-stale-branches/src/: main.rs
ls-stale-prs/: Cargo.toml
ls-stale-prs/src/: main.rs
reposlug/: Cargo.toml
reposlug/src/: main.rs
stale-branches/: Cargo.toml
stale-branches/src/: main.rs
stale-prs/: Cargo.toml
stale-prs/src/: main.rs
tests/: shell-functions.zsh
worktree/: Cargo.toml
worktree/src/: bare.rs  cli.rs  config.rs  flatten.rs  init.rs  lib.rs  list.rs  main.rs  migrate.rs  pick.rs  prune.rs  shell.rs  switch.rs
worktree/src/bare/: tests.rs
worktree/src/config/: tests.rs
worktree/src/flatten/: tests.rs
worktree/src/init/: tests.rs
worktree/src/list/: tests.rs
worktree/src/migrate/: tests.rs
worktree/src/pick/: tests.rs
worktree/src/prune/: tests.rs
worktree/src/shell/: tests.rs
worktree/src/switch/: tests.rs
worktree/tests/: lifecycle_tests.rs
