[workspace]
members = [
  "common",
  "clone",
  "reposlug",
  "filter-ref",
  "ls-git-repos",
  "ls-github-repos",
  "ls-owners",
  "ls-stale-branches",
  "ls-stale-prs",
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
git2 = "0.20.2"
common = { path = "common" }

[workspace.package]
version = "0.1.16"
