[workspace]
members = [
  "common",
  "clone",
  "reposlug",
  "filter-ref",
  "ls-git-repos",
  "ls-github-repos",
  "ls-owners",
  "ls-stale-branches",
  "ls-stale-prs",
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
eyre = "0.6.12"
log = "0.4.32"
git2 = "0.21.0"
common = { path = "common" }

[workspace.package]
version = "0.2.5"
