[package]
name = "common"
version.workspace = true
edition = "2024"

[dependencies]
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.12.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27"
