[package]
name = "ls-git-repos"
version = "0.1.13"
edition = "2021"
build = "../build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

shellexpand = "3.1.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
regex = "1.10.3"
rust-ini = "0.21.1"

