[package]
name = "ls-git-repos"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
clap = { workspace = true }
common = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

rayon = "1.12.0"
shellexpand = "3.1.2"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
regex = "1.12.3"
rust-ini = "0.21.3"
