[package]
name = "ls-github-repos"
version = "0.1.13"
edition = "2024"
build = "../build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tokio = { version = "1.45.1", features = ["full"] }
