[package]
name = "ls-github-repos"
version = "0.1.17"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9"
shellexpand = "3.1.1"
tokio = { version = "1.47.0", features = ["full"] }
