[package]
name = "ls-github-repos"
version.workspace = true
edition = "2024"
build = "build.rs"

[dependencies]
clap = { workspace = true }
common = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
shellexpand = "3.1.2"
tokio = { version = "1.52.3", features = ["full"] }
