[package]
name = "ls-owners"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
common = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
regex = "1.11.1"
dirs = "6.0.0"
colored = "3.0.0"

[dev-dependencies]
tempfile = "3.20"
