[package]
name = "ls-owners"
version.workspace = true
edition = "2024"
build = "build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
common = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
regex = "1.12.3"
dirs = "6.0.0"
colored = "3.1.1"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde_json = "1.0.150"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.27"
