[package]
name = "ls-stale-branches"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
common = { workspace = true }

chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.27"
