[package]
name = "ls-stale-prs"
version.workspace = true
edition = "2024"
build = "build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
common = { workspace = true }

chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.27"
